--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8681,6 +8681,14 @@
    (set_attr "length_immediate" "2")
    (set_attr "modrm" "0")])
 
+(define_insn "return_indirect_internal"
+  [(return)
+   (use (match_operand:SI 0 "register_operand" "r"))]
+  "reload_completed"
+  "jmp\\t%*%0"
+  [(set_attr "type" "ibr")
+   (set_attr "length_immediate" "0")])
+
 (define_insn "nop"
   [(const_int 0)]
   ""
