* cse.c: Fix a comment typo. Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35472 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-04  Kazu Hirata  <kazu@hxi.com>
+
+	* cse.c: Fix a comment typo. Fix formatting.
+
 2000-08-03  Richard Henderson  <rth@cygnus.com>
 
         * config/i386/i386.md (return_indirect_internal): New.
