* gencodes.c (main): Define CODE_FOR_nothing as the last possible         insn_code_number + 1.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35473 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-04 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
+
+	* gencodes.c (main): Define CODE_FOR_nothing as the last possible
+	insn_code_number + 1.
+
 2000-08-04  Kazu Hirata  <kazu@hxi.com>
 
 	* cse.c: Fix a comment typo. Fix formatting.
