* h8300.c (function_prologue): Rearrange code for conciseness.         (function_epilogue): Likewise.         * hh8300.h (OK_FOR_U): Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35474 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -5,6 +5,10 @@
 
 2000-08-04  Kazu Hirata  <kazu@hxi.com>
 
+	* h8300.c (function_prologue): Rearrange code for conciseness.
+	(function_epilogue): Likewise.
+	* h8300.h (OK_FOR_U): Fix formatting.
+
 	* cse.c: Fix a comment typo. Fix formatting.
 
 2000-08-03  Richard Henderson  <rth@cygnus.com>
