--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* MAINTAINERS: Add self to Write After Approval list.
+
 2000-08-03  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (libstdcxx_flags): Don't use `"'.
