--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-printf-1.c, gcc.dg/c94-printf-1.c: New tests.
+
 2000-08-03  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/cpp/20000625-2.c: Don't expect a warning on line 4.
