--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-08-04  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
+	* configure.in: Use default thread_file even when enable_threads is
+	yes or dce because hpux10.20 pa port uses MULTILIB implementation.
+	* configure: Rebuilt.
+
 	* gthr-dce.h (__gthread_objc_condition_allocate): Fix typo.
 
 2000-08-04  Donn Terry (donnte@microsoft.com)
