--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Fri Aug  4 23:00:50 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* gcc.c-torture/execute/20000804-1.c: New test.
+
 2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-printf-1.c, gcc.dg/c94-printf-1.c: New tests.
