--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-05  Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
+
+        * config/c4x/c4x.md (return_indirect_internal): New.
+        * config/c4x/c4x.c (c4x_expand_epilogue): Use it.
+
 2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-common.c (time_char_table): Mark up formats added in C99 and
