--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-04  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* Make-lang.in (f771): Depend on $(BACKEND), not stamp-objlist.
+	* Makefile.in: Add BACKEND; delete OBJS, OBJDEPS.
+	(f771): Link with $(BACKEND).
+
 2000-08-02  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* g77spec.c: Adjust type of second argument to
