* i386.h (FUNCTION_OK_FOR_SIBCALL):  Not OK if DECL's return 	type is a float mode, cfun->decl's return type is not, and 	TARGET_FLOAT_RETURNS_IN_80387.
	* gcc.c-torture/execute/20000731-1.x: Delete.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-05  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* i386.h (FUNCTION_OK_FOR_SIBCALL):  Not OK if DECL's return
+	type is a float mode, cfun->decl's return type is not, and
+	TARGET_FLOAT_RETURNS_IN_80387.
+
 2000-08-04  Andreas Schwab  <schwab@suse.de>
 
 	* cppmain.c (cb_def_pragma): Skip the first two tokens from the
