--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-05  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.c-torture/execute/20000731-1.x: Delete.  
+
 2000-08-04  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* lib/gcc-dg.exp: Set up TORTURE_OPTIONS, torture_with_loops,
