--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-08-05  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-common.c (print_char_table): Add entries for the X/Open '
+	format flag (print decimals with locale's thousands grouping
+	character).  Make %C expect wint_t.
+	(check_format_info): If pedantic, warn when the %n$ operand
+	number form is used.  Allow for the ' flag; warn about it if
+	pedantic.
+
 2000-08-05  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* i386.h (FUNCTION_OK_FOR_SIBCALL):  Not OK if DECL's return
